Sun Mar  3 10:41:04 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Change WITH_DB to WITH_KDB_DB

Fri Feb 23 19:39:52 1996  Mark Eichin  <eichin@cygnus.com>

	* keytab.c (krb5_ktkdb_close): new function, non-optional.
	(krb5_kt_kdb_ops): include _close method, comment what the other
	slots are.

Tue Feb 13 21:33:03 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kdb_dbm.c (krb5_dbm_db_rename): Initialize pointer before use
		for case where new db does not exist.

Tue Jan 30 18:26:38 1996  Mark Eichin  <eichin@cygnus.com>

	* kdb_dbm.c (krb5_dbm_db_rename): O_EXCL is meaningless without
	O_CREAT.

Sat Jan 27 01:01:17 1996  Mark Eichin  <eichin@cygnus.com>

	* t_kdb.c: wrap db_dbm decls and berkely_dispatch in ifdefs
	BERK_DB_DBM.
	(do_testing): wrap references as well.

	* keytab.c (krb5_ktkdb_get_entry): use KRB5_PROTOTYPE.

Wed Dec 13 09:28:33 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* keytab.c (krb5_ktkdb_resolve): Fix casting

	* t_kdb.c (add_principal): Remove mkvno

Wed Dec 13 07:09:30 1995  Chris Provenzano (proven@mit.edu)

	* Makefile.in, keytab.c : Move db keytab routines here.

Wed Dec 13 03:51:53 1995  Chris Provenzano (proven@mit.edu)

        * kdb_xdr.c : Remove mkvno for krb5_db_entry

Tue Dec 12 01:20:02 1995  Chris Provenzano (proven@mit.edu)

	* kdb_dbm.c : Move the krb5_db_context to include/krb5/kdb_dbc.h.
	* kdb_dbm.c krb5_dbm_db_set_mkey(), krb5_dbm_db_get_mkey():
		Functions for associating a master key (krb5_encrypt_block *)
		to a krb5_db_context. Currently it associates it to the
		krb5_context and will be fixed once the krb5_db_context
		is better defined (Post 1.0).

Thu Nov 09 17:05:57 1995  Chris Provenzano (proven@mit.edu)

        * fetch_mkey.c, kdb_cpw.c, t_kdb.c : 
		Remove krb5_enctype from krb5_string_to_key() args.

Tue Nov  7 16:35:03 1995  Theodore Y. Ts'o  <tytso@dcl>

	* kdb_xdr.c (krb5_dbe_search_enctype): Make a more general version