@@ -5,9 +5,10 @@ AC_PROG_ARCHIVE_ADD
 AC_PROG_RANLIB
 AC_PROG_INSTALL
 AC_HAVE_HEADERS(unistd.h)
-WITH_KDB_DB
-V5_USE_SHARED_LIB
 AC_CHECK_FUNCS(srand48 srand srandom umask)
+V5_USE_SHARED_LIB
+USE_KDB5_LIBRARY
+KRB5_LIBRARIES
 LinkFileDir(../libkdb5.a, libkdb5.a, ./kdb)
 AppendRule([all:: libkdb5.a])
 AppendRule([all-unix:: ../libkdb5.a])
